works on ie9 and all panels with thumbs have gallerys and all load correctly now

--- a/panels/panel1/index.html
+++ b/panels/panel1/index.html
@@ -1,6 +1,6 @@
 <article class="info">
 	<section id="cssoff2011" class="project-content">
-		<h2>2011 CSS Off Entry</h2>
+		<h2>CSS Off 2011 Contest Entry</h2>
 
 		<a href="/examples/cssoff11/" target="_blank" class="project-link">View Site</a>
 		
@@ -9,7 +9,7 @@
 		<ul class="gallery-thumbs">
 			<li>
 				<p>For the top of the site I made use of CSS3 multiple background images, and @font-face for customizing the fonts. Also, some minor CSS transforms for text rotating.</p>
-				<a href="#slide-1">
+				<a href="#slide-1" class="current">
 					<img src="panels/panel1/thumb-1.png" alt="">
 				</a>
 			</li>
