--- a/panels/panel10/index.html
+++ b/panels/panel10/index.html
@@ -1,20 +1,29 @@
 <article class="info">
-	<section id="retirelife" class="project-content">
-		<h2>
-			<a href="http://www.retirelife.net/blog" target="_blank">Retire Life Blog</a>
-		</h2>
+	<section id="portcandle" class="project-content">
+		<h2>The Port Candle</h2>
+		
+		<a href="https://store.portcandle.com" target="_blank" class="project-link">View Shop</a>
+		<a href="http://portcandle.com" target="_blank" class="project-link">View Blog</a>
+		
+		<p>For The Port Candle, I developed websites for the company's blog and also an eCommerce site for selling their products online. I also designed and created the company's entire brand and online presence.</p>
 		
 		<ul class="gallery-thumbs">
 			<li>
-				<p>This is a WordPress 3.0 custom built theme for a blog that made use of the new custom post type feature which was added in WordPress 3.0, before WordPress 3.0 was even released yet.</p>
-				<a href="#slide-1">
+				<p>The shopping cart web site was developed with WordPress and a shop plugin. There is a custom post type for the products, and also one for special promotions that are offered occassionally.</p>
+				<a href="#slide-1" class="current">
 					<img src="panels/panel10/thumb-1.png" alt="">
 				</a>
 			</li>
 			<li>
-				<p>The design included a mega dropdown menu which was for displaying the custom taxonomies that were tied together with the custom post type for the blog.</p>
+				<p>The products are displayed in two different ways, you can change the view to see both a grid view and list view.</p>
 				<a href="#slide-2">
 					<img src="panels/panel10/thumb-2.png" alt="">
+				</a>
+			</li>
+			<li>
+				<p>The blog has a custom post slider for teasing products, news or other announcements.</p>
+				<a href="#slide-3">
+					<img src="panels/panel10/thumb-3.png" alt="">
 				</a>
 			</li>
 		</ul>
