--- a/panels/panel4/index.html
+++ b/panels/panel4/index.html
@@ -7,7 +7,7 @@
 		<ul class="gallery-thumbs">
 			<li>
 				<p>The app is no longer online which means there is no existing example of how it worked and functioned unfortunately. That being the case, I uploaded a short video I made back in the early stages of development which helps provide somewhat of an idea for how the app worked and animated. Most of the content you see within the different panels is static, or non-existent even, but the general idea and navigation should be enough to give an idea for how it worked.</p>
-				<a href="#slide-1" data-vid="http://www.youtube.com/embed/xqjVE_cOlgA">
+				<a href="#slide-1" data-vid="http://www.youtube.com/embed/xqjVE_cOlgA" class="current">
 					<img src="panels/panel4/thumb-1.png" alt="">
 				</a>
 			</li>
