--- a/panels/panel8/index.html
+++ b/panels/panel8/index.html
@@ -4,7 +4,7 @@
 		
 		<a href="http://new2wp.com" target="_blank" class="project-link">View Site</a>
 
-		<p>New2WP is one of my personal WordPress blog sites which I designed and developed, and wrote all the content for. There are some very in-depth tutorials and resourceful articles for people who are learning WordPress and JavaScript which show how to do some things that you won't find on any of the other similar types of WordPress tutorial blogs.</p>
+		<p>New2WP is one of my personal WordPress blog sites which I designed and developed, and wrote all the content for. There are some very in-depth tutorials and resourceful articles for people who are learning WordPress and JavaScript which show how to do things you won't find on any similar WordPress tutorial blogs.</p>
 
 		<ul class="gallery-thumbs">
 			<li>
@@ -12,7 +12,7 @@
 				
 				<p>The design of the site was one of the more intricately detailed designs that I had created and then fully coded out entirely at that time. I do look back at it now and wonder what I was thinking with a large amount of the code, such is life though I suppose. It was quite a learning experience in building it out, as well as how useful it came to be for writing about everything I learned from there on after.</p>
 					
-				<a href="#slide-1">
+				<a href="#slide-1" class="current">
 					<img src="panels/panel8/thumb-1.png" alt="">
 				</a>
 			</li>
