--- a/panels/panel11/index.html
+++ b/panels/panel11/index.html
@@ -1,27 +1,24 @@
 <article class="info">
-	<section id="portcandle" class="project-content">
-		<h2>
-			<a href="https://store.portcandle.com" target="_blank">The Port Candle Shop</a> | and
-			<a href="http://portcandle.com" target="_blank">Blog</a>
-		</h2>
+	<section id="retirelife" class="project-content">
+		<h2>Retire Life Blog</h2>
+		
+		<a href="http://www.retirelife.net/blog" target="_blank" class="project-link">View Site</a>
+		
+		<p>This is a WordPress 3.0 custom built theme for a blog that made use of the new custom post type feature which was added in WordPress 3.0, before WordPress 3.0 was even released yet.</p>
 		
 		<ul class="gallery-thumbs">
 			<li>
-				<p>I made this shopping cart site using WordPress and a shop plugin. There is a custom post type for the products, and also one for special promotions that are offered occassionally.</p>
-				<a href="#slide-1">
+				<p>The site included the use of custom taxonomies, another newly added feature built into WordPress 3.0.</p>
+						
+				<a href="#slide-1" class="current">
 					<img src="panels/panel11/thumb-1.png" alt="">
 				</a>
 			</li>
 			<li>
-				<p>The products are displayed in two different ways, you can change the view to see both a grid view and list view.</p>
+				<p>The design included a mega dropdown menu which was for displaying the custom taxonomies that were tied together with the custom post type for the blog.</p>
+				
 				<a href="#slide-2">
 					<img src="panels/panel11/thumb-2.png" alt="">
-				</a>
-			</li>
-			<li>
-				<p>The blog has a custom post slider for teasing products, news or other announcements.</p>
-				<a href="#slide-3">
-					<img src="panels/panel11/thumb-3.png" alt="">
 				</a>
 			</li>
 		</ul>
