--- a/panels/panel5/index.html
+++ b/panels/panel5/index.html
@@ -45,6 +45,9 @@
 			<li class="panel12">
 				<a href="#panel12"><span></span></a>
 			</li>
+			<li class="panel13">
+				<a href="#panel13"><span></span></a>
+			</li>
 		</ul>
 	</nav>
 </article>
