--- a/index.html
+++ b/index.html
@@ -9,17 +9,16 @@
 
 <title>Anti-Code | Laugh Live Code</title>
 
+<!--
 
-<!--========================*\
- oh rly?	ya rly!  
-   \ ___,    ___ /   _,_  no rly?
-    {O,0}   {-.-}   {o,O} /
-    |)__)   |)~(|   (~~(|
------"-"-----"-"-----"-"-----,_
-=========================== -->
+	     ___,    ___     _,_
+	    {O,0}   {-.-}   {o,O}
+	    |)__)   |)~(|   (~~(|
+	-----"-"-----"-"-----"-"-----,_
 
+-->
 
-<meta name="description" content="The personal portfolio of Jared Williams (@jaredwilli) of intereactive awesomeness that provides a little sample of work done less recently.">
+<meta name="description" content="Front-end development portfolio of Jared Williams that dynamically showcases his work with JavaScript, HTML5 and CSS3 in a single-page parallax scroll animation.">
 <meta name="author" content="Jared Williams (@jaredwilli)">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -43,28 +42,25 @@
 	<nav id="main-nav">
 		<h4>Examples:</h4>
 		<ul>
-			<li><a href="#panel1">One</a></li>
-			<li><a href="#panel2">Two</a></li>
-			<li><a href="#panel3">Three</a></li>
-			<li><a href="#panel4">Four</a></li>
-			<li><a href="#panel5" class="active">Five</a></li>
-			<li><a href="#panel6">Six</a></li>
-			<li><a href="#panel7">Seven</a></li>
-			<li><a href="#panel8">Eight</a></li>
-			<li><a href="#panel9">Nine</a></li>
-			<li><a href="#panel10">Ten</a></li>
-			<li><a href="#panel11">Eleven</a></li>
-			<li><a href="#panel12">Twelve</a></li>
+			<li><a href="#panel1">1</a></li>
+			<li><a href="#panel2">2</a></li>
+			<li><a href="#panel3">3</a></li>
+			<li><a href="#panel4">4</a></li>
+			<li><a href="#panel5" class="active">5</a></li>
+			<li><a href="#panel6">6</a></li>
+			<li><a href="#panel7">7</a></li>
+			<li><a href="#panel8">8</a></li>
+			<li><a href="#panel9">9</a></li>
+			<li><a href="#panel10">10</a></li>
+			<li><a href="#panel11">11</a></li>
+			<!-- <li><a href="#panel12">12</a></li> -->
 		</ul>
 	</nav>
-
 </header>
 
 <canvas id="bgGame" width="600" height="500">You need to a newer browser to see this awesomeness!</canvas>
 
 <section id="layer3" class="content layer">
-	<!-- <img src="imgs/grid-ruler.png" alt="ruler" id="ruler" /> -->
-
 	<section id="panel1" class="col0 row0 panel">
   		<!-- Panel 1 Content -->
   		<h1>Panel 1</h1>
@@ -125,10 +121,10 @@
 							<a href="#panel9"><span>JBL.com Recommender</span></a>
 						</li>
 						<li class="panel10">
-							<a href="#panel10"><span>Retire Life</span></a>
+							<a href="#panel10"><span>The Port Candle</span></a>
 						</li>
 						<li class="panel11">
-							<a href="#panel11"><span>The Port Candle</span></a>
+							<a href="#panel11"><span>Retire Life</span></a>
 						</li>
 						<li class="panel12">
 							<a href="#panel12"><span></span></a>
@@ -173,7 +169,6 @@
 		<!-- Panel 12 Content -->
 		<h1>Panel 12</h1>
   	</section>
-
 </section>
 
 
@@ -192,9 +187,7 @@
 		<p>Made by <a href="http://twitter.com/jaredwilli">Jared Williams</a></p>
 
 		<a href="https://twitter.com/share" class="twitter-share-button" data-via="anticode" data-related="jaredwilli">Tweet</a>
-
 		<div class="fb-like" data-href="http://anti-code.com" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false"></div>
-
 	</span>
 </footer>
 
@@ -203,7 +196,7 @@
 <!-- The missing protocol means that it will match the current protocol, either http or https. If running locally, we use the local jQuery. -->
 <script defer src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 <!-- <script type="text/javascript" src="js/libs/Box2dWeb-2.1.a.3.min.js"></script> -->
-<script defer src="js/plugins.js"></script>
+<!-- <script defer src="js/plugins.js"></script> -->
 <script src="js/main.js"></script>
 <!-- <script src="js/canvasLayers.js"></script> -->
 <!-- <script defer src="js/game.asteroids.js"></script> -->
