--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
 		<a href="/">Anti-Code.com</a>
 	</h1>
 
+	<nav id="alt-nav">
+		<a href="/blog">Blog</a>
+	</nav>
+
 	<nav id="main-nav">
 		<h4>Examples:</h4>
 		<ul>
@@ -186,7 +190,10 @@
 		<p>Copyright &copy;2012 <a href="index.html">Anti-Code.com</a> | All Rights Reserved.</p>
 		<p>Made by <a href="http://twitter.com/jaredwilli">Jared Williams</a></p>
 
+		<!-- <div class="g-plusone" data-size="medium" data-href="http://anti-code.com"></div> -->
+
 		<a href="https://twitter.com/share" class="twitter-share-button" data-via="anticode" data-related="jaredwilli">Tweet</a>
+
 		<div class="fb-like" data-href="http://anti-code.com" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false"></div>
 	</span>
 </footer>
@@ -205,6 +212,8 @@
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
 <script>(function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(d.getElementById(id))return;js=d.createElement(s);js.id=id;js.src="//connect.facebook.net/en_US/all.js#xfbml=1&appId=121556164664182";fjs.parentNode.insertBefore(js,fjs);}(document,'script','facebook-jssdk'));</script>
+
+<script type="text/javascript">(function() {var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;po.src = 'https://apis.google.com/js/plusone.js';var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);})();</script>
 
 <script>
 var _gaq=[['_setAccount','UA-22924724-1'],['_trackPageview']];
