--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
 <link rel="stylesheet" href="css/style.css">
 
-<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.1/modernizr.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.1/modernizr.min.js"></script>
 <!-- Include jQuery here so is loaded when panels with js included dependant on jQuery to work -->
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 </head>
 <body>
 
@@ -131,7 +131,7 @@
 							<a href="#panel11"><span>Retire Life</span></a>
 						</li>
 						<li class="panel12">
-							<a href="#panel12"><span></span></a>
+							<a href="#panel12"><span>Coming soon...</span></a>
 						</li>
 					</ul>
 				</nav>
@@ -187,12 +187,12 @@
 
 <footer>
 	<span class="copyright">
-		<p>Copyright &copy;2012 <a href="index.html">Anti-Code.com</a> | All Rights Reserved.</p>
+		<p>Copyright &copy;2012 <a href="/">Anti-Code.com</a> | All Rights Reserved.</p>
 		<p>Made by <a href="http://twitter.com/jaredwilli">Jared Williams</a></p>
 
 		<!-- <div class="g-plusone" data-size="medium" data-href="http://anti-code.com"></div> -->
 
-		<a href="https://twitter.com/share" class="twitter-share-button" data-via="anticode" data-related="jaredwilli">Tweet</a>
+		<a href="https://twitter.com/share" class="twitter-share-button" data-via="jaredwilli">Tweet</a>
 
 		<div class="fb-like" data-href="http://anti-code.com" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false"></div>
 	</span>
@@ -201,7 +201,7 @@
 <div id="fb-root"></div>
 
 <!-- The missing protocol means that it will match the current protocol, either http or https. If running locally, we use the local jQuery. -->
-<script defer src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+<script defer src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 <!-- <script type="text/javascript" src="js/libs/Box2dWeb-2.1.a.3.min.js"></script> -->
 <!-- <script defer src="js/plugins.js"></script> -->
 <script src="js/main.js"></script>
@@ -213,7 +213,7 @@
 
 <script>(function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(d.getElementById(id))return;js=d.createElement(s);js.id=id;js.src="//connect.facebook.net/en_US/all.js#xfbml=1&appId=121556164664182";fjs.parentNode.insertBefore(js,fjs);}(document,'script','facebook-jssdk'));</script>
 
-<script type="text/javascript">(function() {var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;po.src = 'https://apis.google.com/js/plusone.js';var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);})();</script>
+<script type="text/javascript">(function() {var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;po.src = '//apis.google.com/js/plusone.js';var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);})();</script>
 
 <script>
 var _gaq=[['_setAccount','UA-22924724-1'],['_trackPageview']];
