--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 <meta name="description" content="Front-end development portfolio of Jared Williams that dynamically showcases his work with JavaScript, HTML5 and CSS3 in a single-page parallax scroll animation.">
 <meta name="author" content="Jared Williams (@jaredwilli)">
+<meta name="google-site-verification" content="KEYGcJg9wiwCbvYBfCaBxAXjIV-T2e4SOV6pV6AL2co" />
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -57,7 +58,10 @@
 			<li><a href="#panel9">9</a></li>
 			<li><a href="#panel10">10</a></li>
 			<li><a href="#panel11">11</a></li>
-			<!-- <li><a href="#panel12">12</a></li> -->
+			<li><a href="#panel12">12</a></li>
+			<li><a href="#panel13">13</a></li>
+			<li><a href="#panel14">14</a></li>
+			<li><a href="#panel15">15</a></li>
 		</ul>
 	</nav>
 </header>
@@ -125,13 +129,22 @@
 							<a href="#panel9"><span>JBL.com Recommender</span></a>
 						</li>
 						<li class="panel10">
-							<a href="#panel10"><span>The Port Candle</span></a>
+							<a href="#panel10"><span>Devtools Cheatsheet</span></a>
 						</li>
 						<li class="panel11">
-							<a href="#panel11"><span>Retire Life</span></a>
+							<a href="#panel11"><span>Google Tour</span></a>
 						</li>
 						<li class="panel12">
-							<a href="#panel12"><span>Coming soon...</span></a>
+							<a href="#panel12"><span>The Port Candle</span></a>
+						</li>
+						<li class="panel13">
+							<a href="#panel13"><span>Retire Life</span></a>
+						</li>
+						<li class="panel14">
+							<a href="#panel14"><span></span></a>
+						</li>
+						<li class="panel15">
+							<a href="#panel15"><span></span></a>
 						</li>
 					</ul>
 				</nav>
@@ -173,6 +186,22 @@
 		<!-- Panel 12 Content -->
 		<h1>Panel 12</h1>
   	</section>
+
+	<section id="panel13" class="col0 row4 panel">
+		<!-- Panel 13 Content -->
+		<h1>Panel 13</h1>
+  	</section>
+
+	<section id="panel14" class="col1 row4 panel">
+		<!-- Panel 14 Content -->
+		<h1>Panel 14</h1>
+  	</section>
+
+	<section id="panel15" class="col2 row4 panel">
+		<!-- Panel 15 Content -->
+		<h1>Panel 15</h1>
+  	</section>
+
 </section>
 
 
@@ -203,7 +232,8 @@
 <!-- The missing protocol means that it will match the current protocol, either http or https. If running locally, we use the local jQuery. -->
 <script defer src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 <!-- <script type="text/javascript" src="js/libs/Box2dWeb-2.1.a.3.min.js"></script> -->
-<!-- <script defer src="js/plugins.js"></script> -->
+<!-- <script src="js/libs/requestAnim.js"></script> -->
+<script defer src="js/plugins.js"></script>
 <script src="js/main.js"></script>
 <!-- <script src="js/canvasLayers.js"></script> -->
 <!-- <script defer src="js/game.asteroids.js"></script> -->
