fix broken things add stuff idk

--- a/index.bak.html
+++ b/index.bak.html
@@ -58,13 +58,12 @@
 			<li><a href="#panel9">9</a></li>
 			<li><a href="#panel10">10</a></li>
 			<li><a href="#panel11">11</a></li>
-			<li><a href="#panel12">12</a></li>
-			<li><a href="#panel13">13</a></li>
-			<li><a href="#panel14">14</a></li>
-			<li><a href="#panel15">15</a></li>
+			<!-- <li><a href="#panel12">12</a></li> -->
 		</ul>
 	</nav>
 </header>
+
+<canvas id="bgGame" width="600" height="500">You need to a newer browser to see this awesomeness!</canvas>
 
 <section id="layer3" class="content layer">
 	<section id="panel1" class="col0 row0 panel">
@@ -127,22 +126,13 @@
 							<a href="#panel9"><span>JBL.com Recommender</span></a>
 						</li>
 						<li class="panel10">
-							<a href="#panel10"><span>Devtools Cheatsheet</span></a>
+							<a href="#panel10"><span>The Port Candle</span></a>
 						</li>
 						<li class="panel11">
-							<a href="#panel11"><span>Google Tour</span></a>
+							<a href="#panel11"><span>Retire Life</span></a>
 						</li>
 						<li class="panel12">
-							<a href="#panel12"><span>The Port Candle</span></a>
-						</li>
-						<li class="panel13">
-							<a href="#panel13"><span>Webernote</span></a>
-						</li>
-						<li class="panel14">
-							<a href="#panel14"><span></span></a>
-						</li>
-						<li class="panel15">
-							<a href="#panel15"><span></span></a>
+							<a href="#panel12"><span>Coming soon...</span></a>
 						</li>
 					</ul>
 				</nav>
@@ -184,25 +174,8 @@
 		<!-- Panel 12 Content -->
 		<h1>Panel 12</h1>
   	</section>
-
-	<section id="panel13" class="col0 row4 panel">
-		<!-- Panel 13 Content -->
-		<h1>Panel 13</h1>
-  	</section>
-
-	<section id="panel14" class="col1 row4 panel">
-		<!-- Panel 14 Content -->
-		<h1>Panel 14</h1>
-  	</section>
-
-	<section id="panel15" class="col2 row4 panel">
-		<!-- Panel 15 Content -->
-		<h1>Panel 15</h1>
-  	</section>
-
 </section>
 
-<canvas id="bgGame" width="600" height="500">You need to a newer browser to see this awesomeness!</canvas>
 
 <section id="layer5" class="waves layer"></section>
 <section id="layer4" class="waves layer"></section>
@@ -216,18 +189,13 @@
 <footer>
 	<span class="copyright">
 		<p>Copyright &copy;2012 <a href="/">Anti-Code.com</a> | All Rights Reserved.</p>
-		<p>
-			Made by <a href="http://twitter.com/jaredwilli">Jared Williams</a> |
-			<a href="/blog/">Blog</a> |
-			<a href="https://github.com/jaredwilli">Github</a> <!-- |
-			<a href="stackoverflow.com/users/297765/jaredwilli?tab=reputation">StackOverflow</a> -->
-		</p>
+		<p>Made by <a href="http://twitter.com/jaredwilli">Jared Williams</a></p>
 
 		<!-- <div class="g-plusone" data-size="medium" data-href="http://anti-code.com"></div> -->
 
 		<a href="https://twitter.com/share" class="twitter-share-button" data-via="jaredwilli">Tweet</a>
 
-		<!-- <div class="fb-like" data-href="http://anti-code.com" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false"></div> -->
+		<div class="fb-like" data-href="http://anti-code.com" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false"></div>
 	</span>
 </footer>
 
@@ -236,18 +204,18 @@
 <!-- The missing protocol means that it will match the current protocol, either http or https. If running locally, we use the local jQuery. -->
 <script defer src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 <!-- <script type="text/javascript" src="js/libs/Box2dWeb-2.1.a.3.min.js"></script> -->
-<!-- <script src="js/libs/requestAnim.js"></script> -->
-<script defer src="js/plugins.js"></script>
+<script src="js/libs/requestAnim.js"></script>
+<!-- <script defer src="js/plugins.js"></script> -->
 <script src="js/main.js"></script>
 <!-- <script src="js/canvasLayers.js"></script> -->
 <!-- <script defer src="js/game.asteroids.js"></script> -->
 
 
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="http://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
-<!-- <script>(function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(d.getElementById(id))return;js=d.createElement(s);js.id=id;js.src="//connect.facebook.net/en_US/all.js#xfbml=1&appId=121556164664182";fjs.parentNode.insertBefore(js,fjs);}(document,'script','facebook-jssdk'));</script> -->
+<script>(function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(d.getElementById(id))return;js=d.createElement(s);js.id=id;js.src="//connect.facebook.net/en_US/all.js#xfbml=1&appId=121556164664182";fjs.parentNode.insertBefore(js,fjs);}(document,'script','facebook-jssdk'));</script>
 
-<!-- <script type="text/javascript">(function() {var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;po.src = '//apis.google.com/js/plusone.js';var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);})();</script> -->
+<script type="text/javascript">(function() {var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;po.src = '//apis.google.com/js/plusone.js';var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);})();</script>
 
 <script>
 var _gaq=[['_setAccount','UA-22924724-1'],['_trackPageview']];
