--- a/panels/panel10/index.html
+++ b/panels/panel10/index.html
@@ -1,33 +1,28 @@
 <article class="info">
-	<section id="portcandle" class="project-content">
-		<h2>The Port Candle</h2>
-		
-		<a href="https://store.portcandle.com" target="_blank" class="project-link">View Shop</a>
-		<a href="http://portcandle.com" target="_blank" class="project-link">View Blog</a>
-		
-		<p>For The Port Candle, I developed websites for the company's blog and also an eCommerce site for selling their products online. I also designed and created the company's entire brand and online presence.</p>
-		
+	<section id="cheatsheet" class="project-content">
+		<h2>Chrome Devtools Cheatsheet</h2>
+
+		<a href="http://anti-code.com/devtools-cheatsheet/" target="_blank" class="project-link">View Cheatsheet</a>
+
+		<p>As a developer, you need to know your tools for developing well. This is cheatsheet is something I put together to make a central location for all the shortcut keys and little tricks and hidden secrets within the Chrome Devtools.</p>
+
 		<ul class="gallery-thumbs">
 			<li>
-				<p>The shopping cart web site was developed with WordPress and a shop plugin. There is a custom post type for the products, and also one for special promotions that are offered occassionally.</p>
+				<p>There are several shortcuts for doing all sorts of things in Devtools that include shortcuts that are global, for searching, and more. I am currently working to update the Shortcuts dialog that is in the Devtools settings panel so that it displays a more complete list, to eventually be more of a documentation reference which can be easily updated.</p>
+
 				<a href="#slide-1" class="current">
 					<img src="panels/panel10/thumb-1.png" alt="">
 				</a>
 			</li>
 			<li>
-				<p>The products are displayed in two different ways, you can change the view to see both a grid view and list view.</p>
+				<p>The cheatsheet covers areas of the Devtools from global shortcuts, to shortcuts for each panel individually, to various things within Devtools that may not be so obvious. It also includes some Chrome flags and list of pages that can be useful too, as well as how to customize your Devtools theme. You can contribute to the cheatsheet at the project page on Github.com.</p>
+
 				<a href="#slide-2">
 					<img src="panels/panel10/thumb-2.png" alt="">
 				</a>
 			</li>
-			<li>
-				<p>The blog has a custom post slider for teasing products, news or other announcements.</p>
-				<a href="#slide-3">
-					<img src="panels/panel10/thumb-3.png" alt="">
-				</a>
-			</li>
 		</ul>
-	
+
 		<div class="gallery"></div>
 	</secton>
 </article>
