--- a/panels/panel11/index.html
+++ b/panels/panel11/index.html
@@ -1,28 +1,32 @@
 <article class="info">
-	<section id="retirelife" class="project-content">
-		<h2>Retire Life Blog</h2>
-		
-		<a href="http://www.retirelife.net/blog" target="_blank" class="project-link">View Site</a>
-		
-		<p>This is a WordPress 3.0 custom built theme for a blog that made use of the new custom post type feature which was added in WordPress 3.0, before WordPress 3.0 was even released yet.</p>
-		
+	<section id="google-tour" class="project-content">
+		<h2>Google Tour</h2>
+
+		<a href="http://anti-code.com/examples/GoogleTour/" target="_blank" class="project-link">View Site</a>
+
+		<p>I made this as part of the interview process for a job with Google where they provided me with the text and told me to be creative and to try to get it done within 2 days if I could.</p>
+
 		<ul class="gallery-thumbs">
 			<li>
-				<p>The site included the use of custom taxonomies, another newly added feature built into WordPress 3.0.</p>
-						
+				<p>My Google Tour example has a similar look and feel as Google's UI and is 100% valid HTML5 semantic markup.</p>
+
+				<p>They suggested I not use any libraries or frameworks and therefore I decided to use a function I wrote for a LinkedIn interview that to <code>addClass()</code> to Elements. I ended up creating a JavaScript micro library with it called <a href="https://github.com/jaredwilli/qlass/">Qlass.js</a>, which I added <code>removeClass()</code> and <code>hasClass()</code> to compliment addClass. It takes both Elements and NodeLists as well.</p>
+
 				<a href="#slide-1" class="current">
 					<img src="panels/panel11/thumb-1.png" alt="">
 				</a>
 			</li>
 			<li>
-				<p>The design included a mega dropdown menu which was for displaying the custom taxonomies that were tied together with the custom post type for the blog.</p>
-				
+				<p>This demo is coded with just HTML5, CSS3, and plain JavaScript. I tried out a couple different transition effects when navigating from page to page, one of which would zoom the visible page all the way out while zooming the next page that was clicked on in.</p>
+
+				<p>I would've liked to have done a much cooler and more interactive Canvas solution for this to send back to them but I had determined that 2 days was not enough time to come up with something using Canvas unfortunately.</p>
+
 				<a href="#slide-2">
 					<img src="panels/panel11/thumb-2.png" alt="">
 				</a>
 			</li>
 		</ul>
-	
+
 		<div class="gallery"></div>
 	</secton>
 </article>
