--- a/panels/panel4/index.html
+++ b/panels/panel4/index.html
@@ -2,25 +2,52 @@
 	<section id="samsung" class="project-content">
 		<h2>Samsung Olympic Genome Project</h2>
 
-		<p>The Olympic Genome Project was a complex Facebook data visualization app and interactive gaming experience built with Canvas and HTML5 to display information within a single animated page the different ways which consumers are connected to Olympic athletes.</p>
+		<p>The Olympic Genome Project was a complex Facebook data visualization app and interactive gaming experience built with Canvas and HTML5 to display connections to different Olympic athletes in a single-page app. It won a Silver award for Creating a Movement and Gold for Social Media and Innovation from Ad-Age.</p>
 
 		<ul class="gallery-thumbs">
 			<li>
-				<p>The app is no longer online which means there is no existing example of how it worked and functioned unfortunately. That being the case, I uploaded a short video I made back in the early stages of development which helps provide somewhat of an idea for how the app worked and animated. Most of the content you see within the different panels is static, or non-existent even, but the general idea and navigation should be enough to give an idea for how it worked.</p>
+				<p>The app is no longer online which means there is no existing example of how it worked and functioned unfortunately. That being the case, I uploaded a short video I made back in the early stages of development which helps provide somewhat of an idea for how the app worked and animated.</p>
+
+				<p>Most of the content you see within the different panels is static, or non-existent even, but the general idea and navigation should be enough to give an idea for how it worked.</p>
+
 				<a href="#slide-1" data-vid="http://www.youtube.com/embed/xqjVE_cOlgA" class="current">
 					<img src="panels/panel4/thumb-1.png" alt="">
 				</a>
 			</li>
 			<li>
 				<p>I worked on this project for about 8 months when I was at Isobar and lead the development of the front-end for about 6 of those months after inheriting the lead role. A community within a social network to incorporate the social graph and users profile data to find matching data from USOC to create different degrees of separation.</p>
+
 				<a href="#slide-2">
 					<img src="panels/panel4/thumb-2.png" alt="">
 				</a>
 			</li>
 			<li>
-				<p>Every single piece of this application was an obstacle that needed to be overcome somehow. Having to figure out ways to make something work the way it needed to was only the beginning. Once that was done, it was then a matter of finding a way to make it work for all of the browsers and devices that the app was required to support. This included browsers on tablet devices, and computer browsers, from Internet Explorer 8 which does not have support for Canvas, to all modern browsers and versions of each Firefox, Chrome, Opera and Safari as well as the default browser that Andriod used prior to Ice Cream Sandwich. It was difficult to make the Canvas graph animation function on tablet devices, and even harder to improve the speed and performance for such devices which had yet to really even support such new technologies as Canvas. Luckily, I was successful in finding a way to make it perform well and the same across both tablets and computers.</p>
+				<p>Every single piece of this application was an obstacle that needed to be overcome somehow. Having to figure out ways to make something work the way it needed to was only the beginning. Once that was done, it was then a matter of finding a way to make it work for all of the browsers and devices that the app was required to support.</p>
+
+				<p>This included browsers on tablet devices, and computer browsers, from Internet Explorer 8 which does not have support for Canvas, to all modern browsers and versions of each Firefox, Chrome, Opera and Safari as well as the default browser that Andriod used prior to Ice Cream Sandwich. It was difficult to make the Canvas graph animation function on tablet devices, and even harder to improve the speed and performance for such devices which had yet to really even support such new technologies as Canvas.</p>
+
+				<p>Luckily, I was successful in finding a way to make it perform well and the same across both tablets and computers.</p>
+
 				<a href="#slide-3" data-vid="http://www.facebook.com/v/10100307750402631">
 					<img src="panels/panel4/thumb-3.png" alt="">
+				</a>
+			</li>
+			<li>
+
+				<a href="#slide-4">
+					<img src="panels/panel4/thumb-4.png" alt="">
+				</a>
+			</li>
+			<li>
+
+				<a href="#slide-5">
+					<img src="panels/panel4/thumb-5.png" alt="">
+				</a>
+			</li>
+			<li>
+
+				<a href="#slide-6">
+					<img src="panels/panel4/thumb-6.png" alt="">
 				</a>
 			</li>
 		</ul>
