making changes to things bigtime, moving parallax imgs into canvas

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<nav id="main-nav">
 		<h4>Examples:</h4>
 		<ul>
-			<li><a href="#panel1">1</a></li>
+			<!-- <li><a href="#panel1">1</a></li>
 			<li><a href="#panel2">2</a></li>
 			<li><a href="#panel3">3</a></li>
 			<li><a href="#panel4">4</a></li>
@@ -61,7 +61,7 @@
 			<li><a href="#panel12">12</a></li>
 			<li><a href="#panel13">13</a></li>
 			<li><a href="#panel14">14</a></li>
-			<li><a href="#panel15">15</a></li>
+			<li><a href="#panel15">15</a></li> -->
 		</ul>
 	</nav>
 </header>
@@ -87,7 +87,7 @@
 		<h1>Panel 4</h1>
 	</section>
 
-	<section id="panel5" class="col1 row1 panel">
+	<section id="panel5" class="col1 row1 panel active">
 		<!-- Panel 5 Content -->
 		<div class="panel-wrap">
 			<article class="grid-menu">
@@ -136,7 +136,7 @@
 							<a href="#panel12"><span>The Port Candle</span></a>
 						</li>
 						<li class="panel13">
-							<a href="#panel13"><span>Webernote</span></a>
+							<a href="#panel13"><span>Retire Life</span></a>
 						</li>
 						<li class="panel14">
 							<a href="#panel14"><span></span></a>
@@ -202,8 +202,7 @@
 
 </section>
 
-<canvas id="bgGame" width="600" height="500">You need to a newer browser to see this awesomeness!</canvas>
-
+<!--
 <section id="layer5" class="waves layer"></section>
 <section id="layer4" class="waves layer"></section>
 <section id="layer1" class="waves layer"></section>
@@ -211,7 +210,7 @@
 <section id="smCloud" class="cloud layer"></section>
 <section id="medCloud" class="cloud layer"></section>
 <section id="bigCloud" class="cloud layer"></section>
-
+ -->
 
 <footer>
 	<span class="copyright">
@@ -230,6 +229,17 @@
 		<!-- <div class="fb-like" data-href="http://anti-code.com" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false"></div> -->
 	</span>
 </footer>
+
+<div id="img-container">
+	<canvas id="bgGame" width="600" height="500">You need to a newer browser to see this awesomeness!</canvas>
+
+	<img src="imgs/wave-1.png" id="wave-1" />
+	<img src="imgs/wave-4.png" id="wave-4" />
+	<img src="imgs/wave-5.png" id="wave-5" />
+	<img src="imgs/clouds-b.png" id="clouds-b" />
+	<img src="imgs/clouds-m.png" id="clouds-m" />
+	<img src="imgs/clouds-s.png" id="clouds-s" />
+</div>
 
 <div id="fb-root"></div>
 
