--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<nav id="main-nav">
 		<h4>Examples:</h4>
 		<ul>
-			<!-- <li><a href="#panel1">1</a></li>
+			<li><a href="#panel1">1</a></li>
 			<li><a href="#panel2">2</a></li>
 			<li><a href="#panel3">3</a></li>
 			<li><a href="#panel4">4</a></li>
@@ -61,7 +61,7 @@
 			<li><a href="#panel12">12</a></li>
 			<li><a href="#panel13">13</a></li>
 			<li><a href="#panel14">14</a></li>
-			<li><a href="#panel15">15</a></li> -->
+			<li><a href="#panel15">15</a></li>
 		</ul>
 	</nav>
 </header>
@@ -87,7 +87,7 @@
 		<h1>Panel 4</h1>
 	</section>
 
-	<section id="panel5" class="col1 row1 panel active">
+	<section id="panel5" class="col1 row1 panel">
 		<!-- Panel 5 Content -->
 		<div class="panel-wrap">
 			<article class="grid-menu">
