working to make things more nicely responsive for diff screen sizes

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 							<a href="#panel12"><span>The Port Candle</span></a>
 						</li>
 						<li class="panel13">
-							<a href="#panel13"><span>Retire Life</span></a>
+							<a href="#panel13"><span>Webernote</span></a>
 						</li>
 						<li class="panel14">
 							<a href="#panel14"><span></span></a>
@@ -202,7 +202,8 @@
 
 </section>
 
-<!--
+<canvas id="bgGame" width="600" height="500">You need to a newer browser to see this awesomeness!</canvas>
+
 <section id="layer5" class="waves layer"></section>
 <section id="layer4" class="waves layer"></section>
 <section id="layer1" class="waves layer"></section>
@@ -210,7 +211,7 @@
 <section id="smCloud" class="cloud layer"></section>
 <section id="medCloud" class="cloud layer"></section>
 <section id="bigCloud" class="cloud layer"></section>
- -->
+
 
 <footer>
 	<span class="copyright">
@@ -230,24 +231,13 @@
 	</span>
 </footer>
 
-<div id="img-container">
-	<canvas id="bgGame" width="600" height="500">You need to a newer browser to see this awesomeness!</canvas>
-
-	<img src="imgs/wave-1.png" id="wave-1" />
-	<img src="imgs/wave-4.png" id="wave-4" />
-	<img src="imgs/wave-5.png" id="wave-5" />
-	<img src="imgs/clouds-b.png" id="clouds-b" />
-	<img src="imgs/clouds-m.png" id="clouds-m" />
-	<img src="imgs/clouds-s.png" id="clouds-s" />
-</div>
-
 <div id="fb-root"></div>
 
 <!-- The missing protocol means that it will match the current protocol, either http or https. If running locally, we use the local jQuery. -->
 <script defer src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 <!-- <script type="text/javascript" src="js/libs/Box2dWeb-2.1.a.3.min.js"></script> -->
 <!-- <script src="js/libs/requestAnim.js"></script> -->
-<script defer src="js/plugins.js"></script>
+<!-- <script defer src="js/plugins.js"></script> -->
 <script src="js/main.js"></script>
 <!-- <script src="js/canvasLayers.js"></script> -->
 <!-- <script defer src="js/game.asteroids.js"></script> -->
