updated index with update.html and update.js for pushing to server

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 <!-- <script type="text/javascript" src="js/libs/Box2dWeb-2.1.a.3.min.js"></script> -->
 <!-- <script src="js/libs/requestAnim.js"></script> -->
 <script defer src="js/plugins.js"></script>
-<script src="js/main.update.js"></script>
+<script src="js/main.js"></script>
 <!-- <script src="js/canvasLayers.js"></script> -->
 <!-- <script defer src="js/game.asteroids.js"></script> -->
 
