--- a/panels/panel11/index.html
+++ b/panels/panel11/index.html
@@ -12,7 +12,7 @@
 
 				<p>They suggested I not use any libraries or frameworks and therefore I decided to use a function I wrote for a LinkedIn interview that to <code>addClass()</code> to Elements. I ended up creating a JavaScript micro library with it called <a href="https://github.com/jaredwilli/qlass/">Qlass.js</a>, which I added <code>removeClass()</code> and <code>hasClass()</code> to compliment addClass. It takes both Elements and NodeLists as well.</p>
 
-				<a href="#slide-1" class="current">
+				<a href="#slide-1">
 					<img src="panels/panel11/thumb-1.png" alt="">
 				</a>
 			</li>
